Created Signup model

--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -292,15 +292,11 @@
                                                             </div>
                                                         </div>
 
-                                                        <div class="col-6">
-                                                            <div class="mb-3">
-                                                                <label for="stuName" class="form-label">
-                                                                    <h6><b>&nbsp&nbspStudent Name :
-                                                                    </b></b></h6>
-                                                                </label>
-
-                                                                <input type="text" class="form-control-plaintext formcontrol" id="stuName" disabled>
-
+                                                        <div class="col-md-6">
+                                                            <div class="form-floating">
+                                                                <input disabled type="text" class="form-control" id="stuName"
+                                                                       placeholder="Your Name">
+                                                                <label for="floatingLName">Student First Name</label>
                                                             </div>
                                                         </div>
 
