Created User profile change

--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -278,7 +278,7 @@
 
                                                         <div class="col-md-6">
                                                             <div class="form-floating">
-                                                                <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','parent','email','old_parent')" type="email" class="form-control" id="floatingEmail"
+                                                                <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]{3,}@[a-z]{3,}.[a-z]{2,3}$','parent','email','old_parent')" type="email" class="form-control" id="floatingEmail"
                                                                        placeholder="Your Email">
                                                                 <label for="floatingEmail">Email</label>
                                                             </div>
