--- a/src/main/resources/static/StudentModel.html
+++ b/src/main/resources/static/StudentModel.html
@@ -99,7 +99,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','student','email','old_student')" type="email" class="form-control" id="floatingEmail"
+                                                    <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]{3,}@[a-z]{3,}.[a-z]{2,3}$','student','email','old_student')" type="email" class="form-control" id="floatingEmail"
                                                            placeholder="Your Email">
                                                     <label for="floatingEmail">Email</label>
                                                 </div>
