--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -283,7 +283,7 @@
 
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]+@[a-z]+\.[a-z]{2,3}$','teacher','email','old_teacher')" type="email" class="form-control" id="floatingEmail"
+                                                    <input onkeyup="textFieldValidator(floatingEmail,'^[a-z0-9]{3,}@[a-z]{3,}.[a-z]{2,3}$','teacher','email','old_teacher')" type="email" class="form-control" id="floatingEmail"
                                                            placeholder="Your Email">
                                                     <label for="floatingEmail">Email</label>
                                                 </div>
