--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -230,7 +230,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="/changeprofile">
                 <i class="bi bi-person"></i>
                 <span>My Profile</span>
               </a>
