--- a/src/main/resources/static/change-profile.html
+++ b/src/main/resources/static/change-profile.html
@@ -32,6 +32,7 @@
   <script src="assets/Resourse/Jquary/jquary.js"></script>
   <!--Link Dashboard and common js-->
   <script src="assets/js/common.js"></script>
+  <script src="assets/js/changeuser.js"></script>
   <script src="/assets/js/dashboard.js"></script>
 
   <!--iziToast-->
