--- a/src/main/resources/static/Teacherview.html
+++ b/src/main/resources/static/Teacherview.html
@@ -50,7 +50,7 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
   <div class="d-flex align-items-center justify-content-between">
-    <a href="index.html" class="logo d-flex align-items-center">
+    <a href="/dashboard" class="logo d-flex align-items-center">
       <img src="assets/img/logo.png" alt="">
       <span class="d-none d-lg-block">NiceAdmin</span>
     </a>
@@ -254,132 +254,11 @@
   </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
-
-<!-- ======= Sidebar ======= -->
-<aside id="sidebar" class="sidebar">
-
-  <ul class="sidebar-nav" id="sidebar-nav">
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="index.html">
-        <i class="bi bi-grid"></i>
-        <span>Home</span>
-      </a>
-    </li><!-- End Dashboard Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-menu-button-wide"></i><span>Administration</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="user.html">
-            <i class="bi bi-circle"></i><span>User</span>
-          </a>
-        </li>
-        <li>
-          <a href="privilege.html">
-            <i class="bi bi-circle"></i><span>Privilege</span>
-          </a>
-
-      </ul>
-    </li><!-- End Components Nav -->
-
-
-
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="/student">
-        <i class="bi bi-person"></i>
-        <span>Add Student</span>
-      </a>
-    </li><!-- End Profile Page Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="/stureg">
-        <i class="bi bi-question-circle"></i>
-        <span>Student Class Registration</span>
-      </a>
-    </li><!-- End F.A.Q Page Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="/attendance">
-        <i class="bi bi-envelope"></i>
-        <span>Student Attendance</span>
-      </a>
-    </li><!-- End Contact Page Nav -->
-
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Class Implementation</span><i
-              class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="/institute">
-            <i class="bi bi-circle"></i><span>Institute</span>
-          </a>
-        </li>
-        <li>
-          <a href="/classImplementation">
-            <i class="bi bi-circle"></i><span>Class</span>
-          </a>
-        </li>
-      </ul>
-    </li><!-- End Tables Nav -->
-
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-bar-chart"></i><span>Teacher</span><i class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="/teacher">
-            <i class="bi bi-circle"></i><span>Add Teacher</span>
-          </a>
-        </li>
-        <li>
-          <a href="/teacherregistration">
-            <i class="bi bi-circle"></i><span>Teacher Registration</span>
-          </a>
-        </li>
-      </ul>
-    </li><!-- End Charts Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="/parent">
-        <i class="bi bi-person"></i>
-        <span>Add Parent</span>
-      </a>
-    </li><!-- End Profile Page Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="pages-login.html">
-        <i class="bi bi-box-arrow-in-right"></i>
-        <span>Logout</span>
-      </a>
-    </li><!-- End Login Page Nav -->
-
-
-
-  </ul>
-
-
-</aside><!-- End Sidebar-->
-
-  <main id="main" class="main">
+<!--Main-->
+<main id="main" class="main">
 
     <div class="pagetitle">
       <h1 style="color: #4d1354">Dashboard</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
-        </ol>
-      </nav>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
@@ -392,44 +271,16 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-
-
-
                 <div class="card-body">
-                  <h5 class="card-title" style="color: #4d1354">All Registered Student Count</h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="fa-solid fa-graduation-cap"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6 id="regStudent" style="color: #4d1354"></h6>
-                    </div>
-                  </div>
                 </div>
-
               </div>
             </div><!-- End Sales Card -->
 
             <!-- Revenue Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
-
-
-
                 <div class="card-body">
-                  <h5 class="card-title" style="color: #4d1354">All Registered Class Count</h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="fa-solid fa-chalkboard-user"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6 id="classCount" style="color: #4d1354"></h6>
-                    </div>
-                  </div>
                 </div>
-
               </div>
             </div><!-- End Revenue Card -->
 
@@ -437,69 +288,12 @@
             <div class="col-xxl-4 col-xl-12">
 
               <div class="card info-card customers-card">
-
-
-
                 <div class="card-body">
-                  <h5 class="card-title" style="color: #4d1354">All Registered Teacher Count</h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="fa-solid fa-users"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6 id="staffCount" style="color: #4d1354"></h6>
-                    </div>
-                  </div>
-
                 </div>
               </div>
-
             </div><!-- End Customers Card -->
-
-<!--carousels-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="assets/img/pic1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/pic2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/pic3.jpg" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-
-<!--end carousel-->
-
-
           </div>
         </div><!-- End Left side columns -->
-
-
-
-
-
-
-
-
-
-
       </div>
     </section>
 
