Fixed bugs in class-implementation attendance and student-registraion

--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -482,7 +482,7 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Registration Code</th>
                                 <th scope="col">Student ID</th>
-                                <th scope="col">Class Code</th>
+                                <th scope="col">Class Name</th>
                                 <th scope="col">Registration Status</th>
                                 <th scope="col">Modify</th>
                             </tr>
