Checked and Fixed bugs

--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -457,7 +457,7 @@
                                             <div class="col-md-6">
                                                 <div class="form-floating">
                                                     <input onchange="dateFeildValidate(floatingDOB,'','teacher','dob','old_teacher')" type="date" class="form-control" id="floatingDOB"
-                                                           placeholder="Your DOB">
+                                                           placeholder="Your DOB" disabled>
                                                     <label for="floatingDOB">Date of birth <span style="color: red">*</span></label>
                                                 </div>
                                             </div>
