--- a/src/main/resources/static/TeacherRegistration.html
+++ b/src/main/resources/static/TeacherRegistration.html
@@ -428,11 +428,9 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <label for="teacherName" >
-
-                                                        </b></b></h6>
-                                                    </label>
-                                                    <input type="text" class="form-control-plaintext formcontrol" id="teacherName" disabled>
+                                                    <input disabled type="text" class="form-control" id="teacherName"
+                                                           placeholder="Your Name">
+                                                    <label for="teacherName">First Name <span style="color: red">*</span></label>
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
@@ -484,8 +482,8 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Registration code</th>
                                 <th scope="col">Teacher ID</th>
-                                <th scope="col">First name</th>
-                                <th scope="col">Class code</th>
+                                <th scope="col">Class name</th>
+                                <th scope="col">Registration Status</th>
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
