--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -287,21 +287,24 @@
     </li><!-- End Components Nav -->
 
 
-
-
     <li class="nav-item">
-      <a class="nav-link collapsed" href="/student">
-        <i class="bi bi-person"></i>
-        <span>Add Student</span>
+      <a class="nav-link collapsed" data-bs-target="#st-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-bar-chart"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
       </a>
-    </li><!-- End Profile Page Nav -->
+      <ul id="st-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <li>
+          <a href="/student">
+            <i class="bi bi-circle"></i><span>Add Student</span>
+          </a>
+        </li>
+        <li>
+          <a href="/stureg">
+            <i class="bi bi-circle"></i><span>Student Class Registration</span>
+          </a>
+        </li>
+      </ul>
+    </li><!-- End Charts Nav -->
 
-    <li class="nav-item">
-      <a class="nav-link collapsed" href="/stureg">
-        <i class="bi bi-question-circle"></i>
-        <span>Student Class Registration</span>
-      </a>
-    </li><!-- End F.A.Q Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="/attendance">
