--- a/src/main/resources/static/Teacherview.html
+++ b/src/main/resources/static/Teacherview.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
+  <title>ChildSafe</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,7 +27,7 @@
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/stylenew.css" rel="stylesheet">
   <!-- jquary -->
   <script src="assets/Resourse/Jquary/jquary.js"></script>
 
@@ -51,8 +51,8 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="/dashboard" class="logo d-flex align-items-center">
-      <img src="assets/img/logo.png" alt="">
-      <span class="d-none d-lg-block">NiceAdmin</span>
+      <img src="assets/img/Child%20Safe.png" alt="">
+
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
@@ -223,7 +223,7 @@
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
-            <h6 id="uname1"></h6>
+            <h6 id="uname1" style="color: #4d1354"></h6>
             <span id="role"></span>
           </li>
           <li>
@@ -257,9 +257,10 @@
 <!--Main-->
 <main id="main" class="main">
 
-    <div class="pagetitle">
-      <h1 style="color: #4d1354">Dashboard</h1>
-    </div><!-- End Page Title -->
+  <div class="pagetitle">
+    <h1 style="color: #4d1354" id="teacherFName"></h1>
+
+  </div><!-- End Page Title -->
 
     <section class="section dashboard">
       <div class="row">
@@ -272,29 +273,84 @@
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
                 <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">Your Teacher ID</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="fa-solid fa-id-card"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6 id="teacherID" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
                 </div>
+
               </div>
             </div><!-- End Sales Card -->
 
-            <!-- Revenue Card -->
+            <!-- Sales Card -->
+            <div class="col-xxl-4 col-md-6">
+              <div class="card info-card sales-card">
+                <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">All Registered Class Count</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="fa-solid fa-graduation-cap"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6 id="regClassCount" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div><!-- End Sales Card -->
+
+            <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
                 <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">All Registered Class List</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="form-floating mb-6">
+                      <select class="form-select" id="floatingSelectClass" aria-label="State">-->
+                        <option selected>Select Class</option>
+                      </select>
+                    </div>
+                    <div class="ps-3">
+                      <h6 id="classCount" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
                 </div>
+
               </div>
             </div><!-- End Revenue Card -->
 
-            <!-- Customers Card -->
-            <div class="col-xxl-4 col-xl-12">
 
-              <div class="card info-card customers-card">
-                <div class="card-body">
-                </div>
-              </div>
-            </div><!-- End Customers Card -->
           </div>
         </div><!-- End Left side columns -->
       </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title" style="color: #4d1354">Attendance</h5>
+          <!-- Smal tables -->
+          <table class="table table-sm" id="tblAttendanceMark">
+            <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th sscope="col">Date</th>
+              <th scope="col">Class Name</th>
+              <th scope="col">Perecentage</th>
+            </tr>
+            </thead>
+            <tbody id="ttttbody">
+            </tbody>
+          </table>
+          <!-- End small tables -->
+        </div>
+      </div>
+
+
     </section>
 
   </main><!-- End #main -->
@@ -327,15 +383,19 @@
   // }
 
 
+  let loggeduser = httpGetRequest("/loguser")
+  if(loggeduser != null){
+    teacherFName.innerText = "Hello.." + loggeduser.teacher.first_name + " " + loggeduser.teacher.last_name;
+    teacherID.innerText = loggeduser.teacher.teacherid;
+  }
 
-  let stuCount = httpGetRequest("/student/activestudent")
-  regStudent.innerText = stuCount.studentid;
+  let registerClassCount = httpGetRequest("/teacherregistration/getclassaccorteacher?teacherid="+loggeduser.teacher.id);
+  regClassCount.innerText = registerClassCount.teacher_reg_code;
 
-  let ClCount = httpGetRequest("/classImplementation/activeClasses")
-  classCount.innerText = ClCount.class_code;
+  getregistrationaccorteacher = httpGetRequest("/teacherregistration/getclasslistaccorteac?teacherid="+loggeduser.teacher.id)
+  fillSelectField(floatingSelectClass, "Select Class Name", getregistrationaccorteacher, 'class_implementation_id.class_name', '');
 
-  let teaCount = httpGetRequest("/teacher/activeTeachers")
-  staffCount.innerText = teaCount.teacherid;
+
 
 
 </script>
