Created Teacher report

--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -519,7 +519,7 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: #4d1354">Parent table</h5>
                         <!-- Table with stripped rows -->
-                        <table class="table datatable" id="prnt_table">
+                        <table class="table" id="prnt_table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -531,6 +531,8 @@
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
+                            <tbody id="tbl_body">
+                            </tbody>
 
                         </table>
                         <!-- End Table with stripped rows -->
