--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -502,7 +502,7 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: #4d1354">Student table</h5>
                         <!-- Table with stripped rows -->
-                        <table class="table datatable" id="std_table">
+                        <table class="table table-sm" id="std_table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -513,6 +513,8 @@
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
+                            <tbody id="tbl_body">
+                            </tbody>
 
                         </table>
                         <!-- End Table with stripped rows -->
