--- a/src/main/resources/static/InstituteImplementation.html
+++ b/src/main/resources/static/InstituteImplementation.html
@@ -481,7 +481,7 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: #4d1354">Institute Table</h5>
                         <!-- Table with stripped rows -->
-                        <table class="table datatable" id="ins_table">
+                        <table class="table" id="ins_table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -492,6 +492,8 @@
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
+                            <tbody id="tbl_body">
+                            </tbody>
 
                         </table>
                         <!-- End Table with stripped rows -->
