--- a/src/main/resources/static/StudentAttendance.html
+++ b/src/main/resources/static/StudentAttendance.html
@@ -28,7 +28,7 @@
     <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/stylenew.css" rel="stylesheet">
 
     <!-- jquary -->
     <script src="assets/Resourse/Jquary/jquary.js"></script>
@@ -44,8 +44,8 @@
 
     <!-- Datatable -->
     <link rel="stylesheet" type="text/css" href="assets/Resourse/Datatables/datatables.min.css">
-
     <script type="text/javascript" src="assets/Resourse/Datatables/datatables.min.js"></script>
+
 
     <!--font awesome-->
     <script src="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/js/all.js"></script>
@@ -531,7 +531,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Student Attendance table</h5>
                         <!-- Table with stripped rows -->
-                        <table id="attendance_tbl" class="table datatable">
+                        <table id="attendance_tbl" class="table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -542,6 +542,8 @@
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
+                            <tbody id="tbl_body">
+                            </tbody>
 
                         </table>
                         <!-- End Table with stripped rows -->
