--- a/src/main/resources/static/StudentRegistration.html
+++ b/src/main/resources/static/StudentRegistration.html
@@ -43,11 +43,9 @@
     <script src="assets/Resourse/iziToast-master/dist/js/iziToast.min.js"></script>
 
     <!-- Datatable -->
-<!--    <link rel="stylesheet" type="text/css" href="assets/Resourse/Datatables/datatables.min.css">-->
-<!--    <script type="text/javascript" src="assets/Resourse/Datatables/datatables.min.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="assets/Resourse/Datatables/datatables.min.css">
+    <script type="text/javascript" src="assets/Resourse/Datatables/datatables.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
 
     <!--font awesome-->
     <script src="assets/Resourse/fontawesome/fontawesome-free-6.2.0-web/js/all.js"></script>
@@ -476,7 +474,7 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: #4d1354">Student Class registration table</h5>
                         <!-- Table with stripped rows -->
-                        <table id="stucls_tbl" class="table datatable">
+                        <table id="stucls_tbl" class="table">
                             <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -487,6 +485,8 @@
                                 <th scope="col">Modify</th>
                             </tr>
                             </thead>
+                            <tbody id="tbl_body">
+                            </tbody>
 
                         </table>
                         <!-- End Table with stripped rows -->
