--- a/src/main/resources/static/Parentview.html
+++ b/src/main/resources/static/Parentview.html
@@ -27,7 +27,7 @@
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/stylenew.css" rel="stylesheet">
   <!-- jquary -->
   <script src="assets/Resourse/Jquary/jquary.js"></script>
 
@@ -51,8 +51,8 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="/dashboard" class="logo d-flex align-items-center">
-      <img src="assets/img/logo.png" alt="">
-      <span class="d-none d-lg-block">NiceAdmin</span>
+      <img src="assets/img/Child%20Safe.png" alt="">
+
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
@@ -218,7 +218,7 @@
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
           <img src="" alt="Profile" class="rounded-circle" id="logimage">
-          <span id="uname" class="d-none d-md-block dropdown-toggle ps-2"></span>
+          <span id="uname" class="d-none d-md-block dropdown-toggle ps-2" style="color: #4d1354"></span>
         </a><!-- End Profile Iamge Icon -->
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -257,10 +257,10 @@
 <!--Main-->
 <main id="main" class="main">
 
-    <div class="pagetitle">
-      <h1 style="color: #4d1354" ></h1>
+  <div class="pagetitle">
+    <h1 style="color: #4d1354" id="ParentFName"></h1>
 
-    </div><!-- End Page Title -->
+  </div><!-- End Page Title -->
 
     <section class="section dashboard">
       <div class="row">
@@ -270,32 +270,96 @@
           <div class="row">
 
             <!-- Sales Card -->
-            <div class="col-xxl-4 col-md-12">
+            <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
                 <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">Registered Student Count</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="fa-solid fa-id-card"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6 id="regStuCount" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
                 </div>
+
               </div>
             </div><!-- End Sales Card -->
 
-            <!-- Revenue Card -->
+            <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
                 <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">Regsitered Student List</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="form-floating mb-6">
+                      <select class="form-select" id="floatingSelectStudent" aria-label="State">
+                        <option selected>Select Student</option>
+                      </select>
+                    </div>
+
+                    <div class="ps-3">
+                      <h6 id="studentList" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
                 </div>
+
               </div>
             </div><!-- End Revenue Card -->
 
-            <!-- Customers Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card">
+            <!-- Sales Card -->
+            <div class="col-xxl-4 col-md-6">
+              <div class="card info-card revenue-card">
                 <div class="card-body">
+                  <h5 class="card-title" style="color: #4d1354">Student registered Classes</h5>
+                  <div class="d-flex align-items-center">
+                    <div class="form-floating mb-6">
+                      <select class="form-select" id="floatingSelectClass" aria-label="State">-->
+                        <option selected>Select Class</option>
+                      </select>
+                    </div>
+
+
+                    <div class="ps-3">
+                      <h6 id="classList" style="color: #4d1354"></h6>
+                    </div>
+                  </div>
                 </div>
+
               </div>
-            </div><!-- End Customers Card -->
+            </div><!-- End Revenue Card -->
+
+
+
           </div>
         </div><!-- End Left side columns -->
       </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title" style="color: #4d1354">Attendance</h5>
+          <!-- Smal tables -->
+          <table class="table table-sm" id="tblAttendanceReportTable">
+            <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th sscope="col">Date</th>
+              <th scope="col">Fisrt Name</th>
+              <th scope="col">Class Name</th>
+              <th scope="col">Present or Absent</th>
+            </tr>
+            </thead>
+            <tbody id="ttttbody">
+            </tbody>
+          </table>
+          <!-- End small tables -->
+        </div>
+      </div>
+
+
+
+
     </section>
 
   </main><!-- End #main -->
@@ -316,29 +380,61 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/common.js"></script>
 
 <script>
 
-  // let activeclasses = httpGetRequest("/classImplementation/activeClasses")
-  // if(Array.isArray(activeclasses)){
-  //   let classNamesText = activeclasses.map(classimplementation => classimplementation.class_name).join('\n');
-  //   activeClassList.innerText = classNamesText;
-  // } else {
-  //   activeClassList.innerText = 'No active classes available';
-  // }
+  let loggeduser = httpGetRequest("/loguser")
+  if(loggeduser != null){
+    ParentFName.innerText = "Hello.." + loggeduser.parent.first_name + " " + loggeduser.parent.last_name;
+  }
+
+  let registerstudentCount = httpGetRequest("/parent/getstudentcount?parentid="+loggeduser.parent.id);
+  regStuCount.innerText = registerstudentCount.address;
 
 
-  // let stuName = httpGetRequest("/student/findall")
-  // studentName.innerText = stuName.stidentid;
-  //
-  // let stuCount = httpGetRequest("/student/activestudent")
-  // regStudent.innerText = stuCount.studentid;
-  //
-  // let ClCount = httpGetRequest("/classImplementation/activeClasses")
-  // classCount.innerText = ClCount.class_code;
-  //
-  // let teaCount = httpGetRequest("/teacher/activeTeachers")
-  // staffCount.innerText = teaCount.teacherid;
+  const fillSelectFieldtwoproperty = (feildid,displayMg,dataList,displayProperty1,displayProperty2,selectedvalue,visibality = false) =>{
+
+    feildid.innerHTML = "";
+    //placeholder
+    element = document.createElement('option');
+    element.selected=true;
+    element.disabled=true
+    element.value="";
+    element.innerText=displayMg
+    feildid.appendChild(element);
+
+    //option
+    for(index in dataList){
+      element2 = document.createElement('option');
+      //element2.value=designation[index];
+
+      //convert object in to string
+      element2.value=JSON.stringify(dataList[index]);
+
+      element2.innerText=dataList[index][displayProperty1]+"==>"+dataList[index][displayProperty2]
+      if(selectedvalue == dataList[index][displayProperty1]){
+        element2.selected="selected";
+      }
+
+      feildid.appendChild(element2);
+
+
+    }
+
+    if(visibality)
+      feildid.disabled = true;
+    else
+      feildid.disabled = false;
+
+
+
+  }
+
+
+
+  getregistrationstudentlist = httpGetRequest("/parent/getstudentList?parentid="+loggeduser.parent.id)
+  fillSelectFieldtwoproperty(classList,"",getregistrationstudentlist,"first_name","studentid",parent.student_id.studentid);
 
 
 </script>
