--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Childsafe</title>
+    <title>ChildSafe</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -61,9 +61,9 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+        <a href="/dashboard" class="logo d-flex align-items-center">
+            <img src="assets/img/Child%20Safe.png" alt="">
+
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -229,7 +229,7 @@
 
                 <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                     <img src="" alt="Profile" class="rounded-circle" id="logimage">
-                    <span id="uname" class="d-none d-md-block dropdown-toggle ps-2"></span>
+                    <span id="uname" class="d-none d-md-block dropdown-toggle ps-2" style="color: #4d1354"></span>
                 </a><!-- End Profile Iamge Icon -->
 
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -272,47 +272,50 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="index.html">
+            <a class="nav-link collapsed" href="/dashboard">
                 <i class="bi bi-grid"></i>
                 <span>Home</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
+        <!--        <li class="nav-item">-->
+        <!--            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">-->
+        <!--                <i class="bi bi-menu-button-wide"></i><span>Administration</span><i-->
+        <!--                    class="bi bi-chevron-down ms-auto"></i>-->
+        <!--            </a>-->
+        <!--            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">-->
+        <!--                <li>-->
+        <!--                    <a href="user.html">-->
+        <!--                        <i class="bi bi-circle"></i><span>User</span>-->
+        <!--                    </a>-->
+        <!--                </li>-->
+        <!--                <li>-->
+        <!--                    <a href="privilege.html">-->
+        <!--                        <i class="bi bi-circle"></i><span>Privilege</span>-->
+        <!--                    </a>-->
+
+        <!--            </ul>-->
+        <!--        </li>&lt;!&ndash; End Components Nav &ndash;&gt;-->
+
+
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-menu-button-wide"></i><span>Administration</span><i
-                    class="bi bi-chevron-down ms-auto"></i>
+            <a class="nav-link collapsed" data-bs-target="#st-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-bar-chart"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+            <ul id="st-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="user.html">
-                        <i class="bi bi-circle"></i><span>User</span>
+                    <a href="/student">
+                        <i class="bi bi-circle"></i><span>Add Student</span>
                     </a>
                 </li>
                 <li>
-                    <a href="privilege.html">
-                        <i class="bi bi-circle"></i><span>Privilege</span>
+                    <a href="/stureg">
+                        <i class="bi bi-circle"></i><span>Student Class Registration</span>
                     </a>
-
+                </li>
             </ul>
-        </li><!-- End Components Nav -->
+        </li><!-- End Charts Nav -->
 
-
-
-
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="/student">
-                <i class="bi bi-person"></i>
-                <span>Add Student</span>
-            </a>
-        </li><!-- End Profile Page Nav -->
-
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="/stureg">
-                <i class="bi bi-question-circle"></i>
-                <span>Student Class Registration</span>
-            </a>
-        </li><!-- End F.A.Q Page Nav -->
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="/attendance">
@@ -367,12 +370,12 @@
             </a>
         </li><!-- End Profile Page Nav -->
 
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="pages-login.html">
-                <i class="bi bi-box-arrow-in-right"></i>
-                <span>Logout</span>
-            </a>
-        </li><!-- End Login Page Nav -->
+        <!--        <li class="nav-item">-->
+        <!--            <a class="nav-link collapsed" href="pages-login.html">-->
+        <!--                <i class="bi bi-box-arrow-in-right"></i>-->
+        <!--                <span>Logout</span>-->
+        <!--            </a>-->
+        <!--        </li>&lt;!&ndash; End Login Page Nav &ndash;&gt;-->
 
 
 
