Get Student presentage

--- a/src/main/resources/static/Studentview.html
+++ b/src/main/resources/static/Studentview.html
@@ -318,7 +318,7 @@
                     <option selected>Select Class</option>
                     </select>
 
-                      <input type="text" disabled>
+                      <input id="precentage" type="text" disabled>
                     </div>
 <!--                    <button style="margin-left: 10px" class="btn btn-info" onclick="getAttendance();">My Attendance</button>-->
 
