bug fixed and UI change on views

--- a/src/main/resources/static/Parent.html
+++ b/src/main/resources/static/Parent.html
@@ -454,7 +454,7 @@
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="form-floating">
-                                                                <input onkeyup="textFieldValidator(floatingTextarea,'','parent','address','old_parent')" type="text" class="form-control" id="floatingTextarea"
+                                                                <input onkeyup="textFieldValidator(floatingTextarea,'^[A-Z0-9][A-Za-z0-9/\\-, ]{2,}$','parent','address','old_parent')" type="text" class="form-control" id="floatingTextarea"
                                                                        placeholder="Your Name">
                                                                 <label for="floatingTextarea">Address <span style="color: red">*</span></label>
                                                             </div>
