--- a/src/main/resources/static/Parentview.html
+++ b/src/main/resources/static/Parentview.html
@@ -51,7 +51,7 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
   <div class="d-flex align-items-center justify-content-between">
-    <a href="/dashboard" class="logo d-flex align-items-center">
+    <a href="/parentview" class="logo d-flex align-items-center">
       <img src="assets/img/Child%20Safe.png" alt="">
 
     </a>
