--- a/src/main/resources/static/Teacher.html
+++ b/src/main/resources/static/Teacher.html
@@ -437,7 +437,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <input onkeyup="textFieldValidator(floatingTextarea,'','teacher','address','old_teacher')" type="text" class="form-control" id="floatingTextarea"
+                                                    <input onkeyup="textFieldValidator(floatingTextarea,'^[A-Z0-9][A-Za-z0-9/\\-, ]{2,}$','teacher','address','old_teacher')" type="text" class="form-control" id="floatingTextarea"
                                                            placeholder="Your Name">
                                                     <label for="floatingDOB">Address <span style="color: red">*</span></label>
                                                 </div>
