--- a/src/main/resources/static/change-profile.html
+++ b/src/main/resources/static/change-profile.html
@@ -53,7 +53,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="/dashboard" class="logo d-flex align-items-center">
+      <a href="#" class="logo d-flex align-items-center" onclick="checkLogUser()">
         <img src="assets/img/Child%20Safe.png" alt="">
 
       </a>
@@ -268,7 +268,7 @@
       <h1 style="color: #4d1354">Profile</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="#" onclick="checkLogUser()">Home</a></li>
           <li class="breadcrumb-item active">Profile</li>
         </ol>
       </nav>
