--- a/src/main/resources/static/Student.html
+++ b/src/main/resources/static/Student.html
@@ -420,7 +420,7 @@
                                             </div>
                                             <div class="col-6">
                                                 <div class="form-floating">
-                                        <textarea onkeyup="textFieldValidator(floatingTextarea,'','student','address','old_student')" class="form-control" placeholder="Address" id="floatingTextarea"
+                                        <textarea onkeyup="textFieldValidator(floatingTextarea,'^[A-Z0-9][A-Za-z0-9/\\-, ]{2,}$','student','address','old_student')" class="form-control" placeholder="Address" id="floatingTextarea"
                                                   style="height: 100px;"></textarea>
                                                     <label for="floatingTextarea">Address <span style="color: red">*</span></label>
                                                 </div>
@@ -458,7 +458,7 @@
                     <div class="modal-footer">
                         <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Add Student</button>
                         <button type="submit" onclick="buttonUpdateMC()" class="btn btn-outline-warning" id="updatebtn" style="border-radius: 50rem !important">Update Student</button>
-                        <button type="submit" onclick="" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
+                        <button type="submit" onclick="refreshForm()" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important">Clear</button>
 <!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
                     </div>
                 </div>
