--- a/src/main/resources/static/StudentModel.html
+++ b/src/main/resources/static/StudentModel.html
@@ -66,7 +66,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="staticBackdropLabel" style="color: #4d1354">Student Sign-Up Form</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close" onclick="window.location.replace('/login')" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <div class="col-lg-12">
@@ -106,7 +106,7 @@
                                             </div>
                                             <div class="col-6">
                                                 <div class="form-floating">
-                                        <textarea onkeyup="textFieldValidator(floatingTextarea,'','student','address','old_student')" class="form-control" placeholder="Address" id="floatingTextarea"
+                                        <textarea onkeyup="textFieldValidator(floatingTextarea,'^[A-Z0-9][A-Za-z0-9/\\-, ]{2,}$','student','address','old_student')" class="form-control" placeholder="Address" id="floatingTextarea"
                                                   style="height: 100px;"></textarea>
                                                     <label for="floatingTextarea">Address <span style="color: red">*</span></label>
                                                 </div>
@@ -142,8 +142,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button onclick="buttonAddMc()" type="submit" class="btn btn-primary" id="addbtn" style="background-color: #4d1354; color: white">Create Account</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="window.location.replace('/login')">Close</button>
+                        <button onclick="buttonAddMc()" type="submit" class="btn btn-outline-success" id="addbtn" style="border-radius: 50rem !important">Create Account</button>
+                        <button type="button" class="btn btn-outline-danger" id="" style="border-radius: 50rem !important" data-bs-dismiss="modal" onclick="window.location.replace('/login')">Close</button>
 
                     </div>
                 </div>
